# mpc_trajectory_follower

./: .gitignore  README.md  THEORY.md  run.sh
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: navigation_params.yaml  obstacles.yaml  waypoints.yaml
src/robot_navigation/include/robot_navigation/: mpc_controller.hpp  spline_generator.hpp
src/robot_navigation/launch/: robot_navigation.launch.py
src/robot_navigation/rviz/: robot_navigation.rviz
src/robot_navigation/scripts/: mission_report.py  plotter.py
src/robot_navigation/src/: path_smoother_node.cpp  trajectory_tracker_node.cpp  waypoint_publisher_node.cpp
src/robot_navigation/test/: test_mpc.cpp  test_spline.cpp
